testing/framework/resources/Advanced/Failing/mondrian/query6213.e
USA	CA	Redwood City	8830	Juan Bradley	Juan Bradley	F	S	High School Degree	$30K - $50K
USA	CA	San Carlos	6613	Tyler Bohn	Tyler Bohn	M	M	Partial High School	$10K - $30K
